# correlation-clustering-of-bird-sounds

./: .gitignore  README.md
correlation-clustering/: CMakeLists.txt
correlation-clustering/include/anon/: functional.hxx  partition.hxx  random-access-set.hxx
correlation-clustering/include/anon/graph/: adjacency.hxx  complete-graph.hxx  components.hxx  cut-vertices.hxx  partition-comparison.hxx  subgraph.hxx  visitor.hxx
correlation-clustering/include/anon/graph/multicut/: edge-label-mask.hxx  greedy-additive.hxx  kernighan-lin.hxx
correlation-clustering/src/: accuracy-0-1.cxx  correlation-clustering-classifier.cxx  correlation-clustering-subsets.cxx  correlation-clustering.cxx
training/: config.py  species-3600.txt  species-600.txt  torch_callbacks.py  torch_classification.py  torch_classifier_analysis.py  torch_datasets.py  torch_metrics.py  torch_siamese.py  torch_siamese_analysis.py  torch_siamese_trainer.py
training/preprocessing/: audio.py  config.py  data_split.py  download.py
